jenkins_mock/examples/single_rpm/kubeobjs/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: hello-container
  labels:
    app: hello-container
spec:
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - hello-container
        from:
          kind: ImageStreamTag
          name: hello-container:latest
  replicas: 1
  selector:
    app: hello-container
    deploymentconfig: hello-container
  template:
    metadata:
      labels:
        app: hello-container
        deploymentconfig: hello-container
      name: hello-container
    spec:
      containers:
        - name: hello-container
          image: ' '
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /cgi-bin/hello
              port: 8000
              scheme: HTTP
