jenkins_mock/examples/single_rpm/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-container
  labels:
    app: hello-container
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hello-container
    deploymentconfig: hello-container
