jenkins_mock/examples/single_rpm/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: hello-container
  labels:
    app: hello-container
spec:
  to:
    kind: Service
    name: hello-container
